--- a/style.css
+++ b/style.css
@@ -100,6 +100,11 @@ img{
 .feature-info{
     padding-left: 50px;
 }
+.feature-info h2{
+    font-size: 45px;
+    font-weight: 700;
+    color: #131313;
+}
 .feature-info span{
     width: 50%;
     font-size: 45px;
